# cert-transparency-slackbot

./: .codespellrc  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  README.md  package.json  pyproject.toml  renovate.json  requirements.txt  serverless.yml  subscribe.py
.github/workflows/: ci.yml  codeql.yml  deploy.yml  poetry-upgrade.yml  pre-commit-autoupdate.yml  subscribe.yml  upgrader.yml
src/: config.py  fb.py  main.py
tests/: test_main.py
