[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.27.0"
slackclient = "^2.9"
environs = "^11.0.0"
sentry-sdk = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
respx = "^0.21.0"
pytest-mock = "^3.3"
pytest-cov = "^6.0.0"
coverage = "^7.0"

[tool.ruff]
target-version = "py39"
line-length = 88

lint.select = [
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "D",   # flake8-docstrings
  "E",   # pycodestyle
  "F",   # pyflake
  "I",   # isort
  "RUF", # ruff specific
  "S",   # flake8-bandit
  "UP",  # pyupgrade
  "W",   # pycodestyle
]
lint.ignore = [
  "D100", # Missing docstring in public module
  "D104", # Missing docstring in public package
  "D107", # Missing docstring in `__init__`
  "D203", # 1 blank line required before class docstring
  "D212", # Multi-line docstring summary should start at the first line
  "D401", # First line of docstring should be in imperative mood
]
lint.per-file-ignores."tests/**/*" = [
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "S101",
]

[tool.pytest.ini_options]
addopts = "-Wdefault --cov=src"

[tool.coverage.run]
branch = true
source = [ "src" ]

[tool.coverage.report]
ignore_errors = true

[dependency-groups]
dev = [
    "pytest<9.0.0,>=8.0.0",
    "respx<1.0.0,>=0.21.0",
    "pytest-mock<4.0,>=3.3",
    "pytest-cov<7.0.0,>=6.0.0",
    "coverage<8.0,>=7.0",
]

[project]
authors = [
    {name = "Bruno Alla", email = "bruno.alla@festicket.com"},
]
requires-python = ">=3.9"
dependencies = [
    "httpx<1.0.0,>=0.27.0",
    "slackclient<3.0,>=2.9",
    "environs<12.0.0,>=11.0.0",
    "sentry-sdk<3.0.0,>=2.0.0",
]
name = "cert-transparency-slack"
version = "0.1.0"
description = ""